final commit before deployment

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-MONGO_URI="mongodb+srv://user:password@databasename.bmpbw.mongodb.net/?retryWrites=true&w=majority"
-TOKEN_KEY="TOKEN_FOR_JWT_AUTH"
+MONGO_URI="mongodb+srv://21951a0549:test@cluster0.1bqs9zx.mongodb.net/?retryWrites=true&w=majority"
+TOKEN_KEY="thisismysecretkey1234567890thisisacryforhelp"
